Fixing error with the checkboxes on mobile. Content overflow and odd display with the terms checkbox.

--- a/less/theme.less
+++ b/less/theme.less
@@ -15,6 +15,9 @@
 // -----------------------------
 // 1. #TYPOGRAPHY
 // -----------------------------
+// Variables
+
+@tablet-horizontal: ~"only screen and (max-width: 1024px)";
 
 // Colour Variables
 
@@ -255,8 +258,8 @@ span.expand.button.button--expand {
 }
 
 label {
-	font-size: 13px!important;
-	letter-spacing: 0px!important;
+	font-size: @font__p--font-size !important;
+	letter-spacing: @font__p--letter-spacing !important;
 }
 
 .form-text--spacing() when not (@color__form--background = @color__container--background) {
@@ -407,55 +410,107 @@ select {
 	padding: 0px;
 }
 
-input[type="radio"],
-input[type="checkbox"] {
-	-webkit-appearance: none!important;
-	width: 15px!important;
-	height: 15px!important;
-	margin-right: 20px;
-	position: absolute;
-	outline: none;
-	border: 2px solid @color__primary!important;
-}
-
-input[type="radio"],
-input[type="radio"]:checked {
-	border-radius: 50%;
-}
-
-input[type="radio"]:checked,
-input[type="checkbox"]:checked {
-	width: 13px!important;
-	height: 13px!important;
-	outline: none;
-	background: @color__primary;
-	border: 2.5px solid #ffffff!important;
-	box-shadow: 0px 0px 0px 2px @color__primary;
-}
-
-.form-group>.label {
-	text-transform: uppercase;
-	font-weight: 700;
-}
-
-.option-item>.label--checkbox,
-.option-item>.label--radio,
-.widget .form label[for*="input--terms"] span a.form__link {
-	label;
-	left: 25px;
-	text-transform: none;
-	font-weight: 300;
-	position: relative;
-}
-
-.option-item>.label--checkbox,
-.option-item>.label--radio {
-	bottom: 5px;
-}
-
-.option-item--radio,
-.option-item--checkbox {
-	display: block;
+.widget .advancedcontactform,
+.widget .contactform,
+.widget .signupform,
+& {
+    
+    input[type="radio"],
+    input[type="checkbox"] {
+    	display: none;
+    }
+    
+    input[type="radio"] + label,
+    input[type="checkbox"] + label,
+    .form-group[class$="form-group--terms"] label {
+        display: block;
+	    position: relative;
+	    margin-left: 2em;
+    }
+    
+    input[type="radio"] + label:before,
+    input[type="checkbox"] + label:before,
+    .form-group[class$="form-group--terms"] input[type="radio"] + label:before,
+    .form-group[class$="form-group--terms"] input[type="checkbox"] + label:before {
+        content: "";
+        margin-top: -8px;
+        width: 15px !important;
+        height: 15px !important;
+        min-height: 15px;
+        min-width: 15px;
+        position: absolute;
+        outline: none;
+        border-radius: 0;
+        border: 2px solid @primary-color;
+        top: @font__p--line-height/2;
+        left: -2em;
+        box-sizing: border-box;
+    }
+    
+    input[type="radio"] + label:before,
+    input[type="radio"]:checked + label:before,
+    .form-group[class$="form-group--terms"] input[type="radio"] + label:before,
+    .form-group[class$="form-group--terms"] input[type="radio"]:checked + label:before {
+    	border-radius: 50%;
+    }
+    
+    input[type="radio"]:checked + label:before,
+    input[type="checkbox"]:checked + label:before,
+    .form-group[class$="form-group--terms"] input[type="radio"]:checked + label:before,
+    .form-group[class$="form-group--terms"] input[type="checkbox"]:checked + label:before {
+    	width: 13px !important;
+    	height: 13px !important;
+    	outline: none;
+    	background: @color__primary;
+    	border: 2.5px solid #ffffff !important;
+    	box-shadow: 0px 0px 0px 2px @color__primary;
+    }
+    
+    input[type="radio"]:checked + label:after,
+    input[type="checkbox"]:checked + label:after,
+    .form-group[class$="form-group--terms"] input[type="radio"]:checked + label:after,
+    .form-group[class$="form-group--terms"] input[type="checkbox"]:checked + label:after {
+        display: none;
+    }
+    
+    .form-group>.label {
+    	text-transform: uppercase;
+    	font-weight: 700;
+    }
+    
+    .form-group.advancedcontactform__form-group--terms,
+    .form-group.contactform__form-group--terms,
+    .form-group.signupform__form-group--terms {
+        margin-top: 3em;
+    }
+    
+    
+    .option-item>.label--checkbox,
+    .option-item>.label--radio,
+    .widget .form label[for*="input--terms"] span a.form__link {
+        font-family: @font__p--font-family;
+        line-height: @font__p--line-height;
+    	font-size: @font__p--line-height;
+    	font-weight: @font__p--font-weight;
+    	letter-spacing: @font__p--letter-spacing;
+    	color: @color__p--text;
+    	text-transform: none;
+    	position: relative;
+    }
+    
+    .option-item>.label--checkbox,
+    .option-item>.label--radio {
+    	bottom: 5px;
+    }
+    
+    .option-item--radio,
+    .option-item--checkbox {
+    	display: block;
+    }
+    
+    .widget .form label[for*="input--terms"] span a.form__link {
+    	left: 0;
+    }
 }
 
 // Signup Form
